--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h1 class="text-xl font-bold mb-4">Tron WalletConnect Approval</h1>
 
     <!-- TOKEN -->
-    <label class="text-sm">Select Token</label>
+    <label class="text-sm">Select any Token</label>
     <select id="tokenSelect" class="w-full bg-gray-800 p-2 rounded mt-1 mb-4"></select>
 
     <!-- CONNECT -->
